--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-APP_NAME=Laravel
+APP_NAME="E-Faktur PBM TERAS MARITIM"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE="Asia/Jakarta"
+APP_URL=http://127.0.0.1
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=id
+APP_FALLBACK_LOCALE=id
+APP_FAKER_LOCALE=id_ID
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -21,11 +21,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=e_faktur_pbm_teras_maritim
+DB_USERNAME=root
 DB_PASSWORD=
 
 SESSION_DRIVER=database
